--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "225vision2014",
   "description": "Vision tracking for FRC team 225 in 2014",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "express": "*",
     "opencv": "*",
-    "jshtml": "*"
+    "ejs": "*",
+	"vapix": "*",
+	"concentrate": "*",
+	"dissolve": "*"
   }
 }
 
